--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "massive": "^5.7.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
