--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "massive": "^5.7.6",
